client/src/components/song/song.module.css
.songItem {
  margin: 5px;
  padding: 5px;
}

.song {
  display: flex;
  border: 1px solid rgb(9, 188, 138);
  align-items: center;
  padding: 4px 8px;
  border-radius: 5px;
  margin-bottom: 5px;
}

.song:hover {
  background-color: rgba(9, 188, 138, 0.2);
}

.songImage {
  float: left;
  height: 50px;
  width: 50px;
  margin: 0 10% 0 5%;
}

.songText {
  font-weight: bold;
  margin: 4px 16px;
}

.songIcon {
  float: right;
  margin: 0 5px 0 5%;
}

